# evraz_project3

./: .gitignore  README.md
components /: docker-compose.yml  pyproject.toml
components /book_service/: .gitignore  Dockerfile  entrypoint_cons.sh  entrypoint_service.sh  setup.cfg
components /book_service/book/adapters/: cli.py
components /book_service/book/adapters/book_api/: app.py  auth.py  controllers.py  settings.py
components /book_service/book/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
components /book_service/book/adapters/message_bus/: consumer.py  scheme.py
components /book_service/book/application/: dataclasses.py  errors.py  interfaces.py  services.py
components /book_service/book/composites/: __init__.py  book_api.py  cli.py  consumer.py
components /book_service/tests/integration/adapters/: conftest.py
components /book_service/tests/unit/application/: conftest.py
components /user_service/: .gitignore  Dockerfile  entrypoint_cons.sh  entrypoint_service.sh  setup.cfg
components /user_service/tests/integration/adapters/: conftest.py
components /user_service/tests/unit/application/: conftest.py
components /user_service/user/adapters/: cli.py
components /user_service/user/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
components /user_service/user/adapters/mail_sending/: __init__.py  sender.py
components /user_service/user/application/: dataclasses.py  errors.py  interfaces.py  services.py
components /user_service/user/composites/: cli.py  user_api.py
(+24 files in other folders)
