[metadata]
name = private library
version = 1.0.0
description = private library with clear arch
author = Daniil Alexandrov
author_email = daneksandrov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    gunicorn~=20.0.0
    click~=7.1.0
    backports.cached-property~=1.0.1
    psycopg2-binary~=2.9.2
    python-json-logger

[options.extras_require]
dev =
    pytest~=6.2.5
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    user_service=user.composites.cli:cli